2000-06-28  Dieter Baron  <dillo@danbala.ifoer.tuwien.ac.at>

	* ftp.c (ftp_accept): set close-on-exec flag, so piping works.

2000-06-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* inet_aton.c (inet_aton): new function.
	* configure.in: AC_REPLACE_FUNCS inet_aton.

2000-06-01  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sockets.c (sopen): use inet_aton to convert dotted quad
	notation to address.

2000-05-18  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cat): correct transfer rate display when start != 0.

2000-05-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cat, _ftp_update_transfer): display transfer rate.

	* signals.c (sig_remember): add sig_alarm.
	* signals.h: declare signal counters extern, add sig_alarm.

2000-05-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* tag.c (_tag_insert): realloc tags.line on overflow, correcting
	next/prev pointers.

2000-05-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* tag.c (tag_file): don't initialize dir if not given, simplified
	strcmp.
	(change_curdir): simplified strncmp.

1999-05-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_reconnect): reset ftp_curmode to ' '.

1999-04-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* readdir.c (parse_ms): new function.
	(read_dir): loop over parser functions until accepted.  free line
	here.
	(parse_unix): reject line if strcspn(line, " ") != 10.  don't free
	line.

1999-02-08  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* added 1999 to copyright notices.
	* readrc.c (readrc): remember password when part of alias url.

1998-12-31  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_retr): place size from 150 response in *sizep (new
	argument); changed callers.
	* fn_select.c (aux_download): use size from ftp_retr if size
	unknown.

1998-12-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* util.c (argstostr): removed (args_to_string is
	duplicate), changed callers.