@@ -1,3 +1,4 @@
+* don't require GNU m4
 * ^[[O triggers bindings for left and O
 * detect hung data connection
 * ftp_retr: check 150 format on different servers
